--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TakeMe"
         tools:targetApi="31">
         <activity
+            android:name="home.view.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".login.view.LoginActivity"
             android:exported="true">
             <intent-filter>
