--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,11 @@
         android:theme="@style/Theme.TakeMe"
         tools:targetApi="31">
         <activity
-            android:name=".login.weather_forecast.view.WeatherReportActivity"
+            android:name=".weather_forecast.view.WeatherReportActivity"
             android:exported="false" />
 
         <service
-            android:name="home.model.map.services.RouteCheckService"
+            android:name=".home.model.map.services.RouteCheckService"
             android:description="@string/check_route_service_description"
             android:enabled="true"
             android:exported="false" />
@@ -32,8 +32,8 @@
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name="home.view.HomeActivity"
-            android:exported="false"></activity>
+            android:name=".home.view.HomeActivity"
+            android:exported="false"/>
         <activity
             android:name=".login.view.LoginActivity"
             android:exported="true">
