--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.TakeMe"
         tools:targetApi="31">
         <activity
+            android:name=".home.view.map.ArrivedToDestinationActivity"
+            android:exported="false" />
+        <activity
             android:name=".weather_forecast.view.WeatherReportActivity"
             android:exported="false" />
 
@@ -33,7 +36,7 @@
 
         <activity
             android:name=".home.view.HomeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".login.view.LoginActivity"
             android:exported="true">
